--- a/Danmarks Svampeatlas/cs.lproj/InfoPlist.strings
+++ b/Danmarks Svampeatlas/cs.lproj/InfoPlist.strings
@@ -1,12 +1,12 @@
-/* 
-  InfoPlist.strings
-  Danmarks Svampeatlas
+/* Bundle name Display name */
+CFBundleDisplayName = "Atlas Hub";
 
-  Created by Emil Møller Lind on 24/01/2020.
-  Copyright © 2020 NaturhistoriskMuseum. All rights reserved.
-*/
+/* (No Comment) */
+NSCameraUsageDescription = "Toto vám umožní používat fotoaparát k přidávání obrázků k pozorování nebo k přijímání doporučení podle druhů.";
 
-CFBundleDisplayName = "Fungal atlas";
-NSCameraUsageDescription = "This allows you to use your camera to add images to an observation, or to recieve image-based species recommendations.";
-NSLocationWhenInUseUsageDescription = "This allows you to find mushroom observations near you, easily find your location when uploading a new observation and to add GPS-location metadata to the images taken with the app.";
-NSPhotoLibraryUsageDescription = "This allows you to add images from your photolibrary to an observation, or use it to get species recommendations. The app also needs this permission in order to save the images you take with the app in your photolibrary.";
+/* (No Comment) */
+NSLocationWhenInUseUsageDescription = "Toto vám umožní najít pozorování hub ve vašem okolí, snadno najít vaši polohu při nahrávání nového pozorování a přidat metadata GPS polohy k obrázkům pořízeným pomocí aplikace.";
+
+/* (No Comment) */
+NSPhotoLibraryUsageDescription = "Toto vám umožní přidat obrázky z vaší galerie k pozorování nebo je použít k získání obecných doporučení. Aplikace také vyžaduje toto povolení, aby bylo možné ukládat obrázky pořízené pomocí aplikace do vaší galerie.";
+
