Added settingsvc and started language picker implementation

--- a/Danmarks Svampeatlas/cs.lproj/Localizable.strings
+++ b/Danmarks Svampeatlas/cs.lproj/Localizable.strings
@@ -406,6 +406,8 @@
 /* (No Comment) */
 "navigationItem_newObservationVC" = "Nové pozorování";
 
+"navigationItem_settings" = "Nastavení";
+
 /* NearbyVC */
 "nearbyVC_title" = "Nedaleko";
 
