--- a/Danmarks Svampeatlas/da.lproj/Localizable.strings
+++ b/Danmarks Svampeatlas/da.lproj/Localizable.strings
@@ -21,6 +21,7 @@
 "navigationItem_cameraVC" = "Navneforslag";
 "navigationItem_facebook" = "Facebook";
 "navigationItem_about" = "Om";
+"navigationItem_settings" = "Indstillinger";
 
 //ToxicityLevels
 "toxicityLevel_poisonous" = "Giftig";
