--- a/Danmarks Svampeatlas/da.lproj/Localizable.strings
+++ b/Danmarks Svampeatlas/da.lproj/Localizable.strings
@@ -98,6 +98,29 @@
 
 "Although an error occured uploading the image/s. %d out of %d images has been successfully uploaded" = "Men der opstod en fejl i forbindelse med at uploade et eller flere billeder. %d ud af %d billeder er blevet uploaded";
 
+"You are editing an observation" = "Du er igang med at redigere en observation";
+"The ability to change your determination for one of your already uploaded observations is coming soon. For now, you can only edit the other properties" = "Muligheden for at tilføje bestemmelser til en allerede bestemt observation kommer snart. For nu, kan du kun redigere de andre variabler";
+
+"Deletions are final" = "Sletning af billedet er permanent";
+"When editing an observation, deletions of images are final, even if you do not submit your other changes. This message will only be shown once, and if you still want to delete the image, you will have to delete the it again" = "Når du redigere en observation, er sletning af uploadede billeder permanente, også selvom du ikke uploader andre ændringer. Denne besked vises kun en gang, or du skal slette billedet igen hvis du ønsker at det skal slettes.";
+
+"Edit observation" = "Rediger observation";
+"Delete observation" = "Slet observation";
+"Could not delete" = "Kunne ikke slette";
+"Cancel" = "Afbryd";
+
+"The observation was successfully edited" = "Observationen blev opdateret";
+
+"Yes, find my location" = "Ja, find min placering";
+"No, I'll adjust it myself" = "Nej, jeg justere placeringen selv";
+
+"Although an error occured uploading the image/s. %d out of %d images has been successfully uploaded" = "Men der skete en fejl med at uploade billedet/ne. %d ud af %d billeder er blevet uploaded";
+
+"Observation with ID: %d" = "Observation med ID: %d";
+"You have the options below:" = "Du har nedenstående valgmuligheder.";
+
+"Whats new?" = "Hvad er nyt?";
+"We're so happy that you are still here!\n\nYour app has been updated with some new exciting features:\n\n- New design in mushroom and observation details\n- You can now edit an observation after it has been uploaded\n- You can delete observations (only within the firt 48h of the upload)\n- Major stability improvements\n- Prepareness for more exiciting features such as: Local storage of observations when internet is limited, interactive validation of observations, add extra finders to an observation" = "Vi er så glade for at du stadig er her\n\nDin app er blevet opdateret og har fået nogle nye spændende funktioner:\n\n- Nyt design i svampe/og observations detajler\n- Du kan nu redigere en uploadet observation efter det er blevet uploaded\n- Du kan nu slette et fund (kun indenfor 48h efter upload)\n- En masse stabilitets forbedringer\n- Klargørelse til nye spændende funktioner (offline gem af et fund hvis der er dårligt internet, interaktiv validering, mm.)";
 
 // MushroomVC
 "mushroomVC_title" = "Svampebog";
@@ -313,6 +336,7 @@
 // ResultsView
 "resultsView_header_title" = "Vi har %d forslag til dig";
 "resultsView_header_message" = "Bemærk at disse forslag er vejledende og aldrig må stå alene, hvis du ønsker at spise de svampe du har fundet.";
+"Record unidentifed mushroom" = "Indlæg en ubestemt svamp";
 
 //AVView
 "avViewError_permissionsError_title" = "Manglende tilladelse";
