--- a/Danmarks Svampeatlas/en.lproj/Localizable.strings
+++ b/Danmarks Svampeatlas/en.lproj/Localizable.strings
@@ -86,8 +86,14 @@
 
 "Although an error occured uploading the image/s. %d out of %d images has been successfully uploaded" = "Although an error occured uploading the image/s. %d out of %d images has been successfully uploaded";
 
+"You are editing an observation" = "You are editing an observation";
+"The ability to change your determination for one of your already uploaded observations is coming soon. For now, you can only edit the other properties" = "The ability to change your determination for one of your already uploaded observations is coming soon. For now, you can only edit the other properties";
+
 // NearbyVC
 "nearbyVC_title" = "Nearby";
+
+"Deletions are final" = "Deletions are final";
+"When editing an observation, deletions of images are final, even if you do not submit your other changes. This message will only be shown once, and if you still want to delete the image, you will have to delete the it again" = "When editing an observation, deletions of images are final, even if you do not submit your other changes. This message will only be shown once, and if you still want to delete the image, you will have to delete the it again.";
 
 
 // MushroomVC
