--- a/Danmarks Svampeatlas/cs.lproj/Localizable.strings
+++ b/Danmarks Svampeatlas/cs.lproj/Localizable.strings
@@ -428,6 +428,8 @@
 
 "navigationItem_settings" = "Nastavení";
 
+"navigationItem_notebook" = "Notebook";
+
 /* NearbyVC */
 "nearbyVC_title" = "Nedaleko";
 
