--- a/Danmarks Svampeatlas/da.lproj/Localizable.strings
+++ b/Danmarks Svampeatlas/da.lproj/Localizable.strings
@@ -1,14 +1,54 @@
 /* No comment provided by engineer. */
 "✔︎ Ready for upload" = "✔︎ Klar til upload";
 
-/* No comment provided by engineer. */
-"✗ Not ready for upload" = "✗ Ikke klar til upload";
-
-/* (No Comment) */
-"aboutVC_general_message" = "Svampeatlas 2.0 bygger videre på atlasprojektet Danmarks Svampeatlas, som kortlagde danske storsvampe, med hovedfokus på basidiesvampene i en femårig periode fra 2009-13. Projektet var støttet af Aage V. Jensen Naturfond og havde som hovedformål at øge vores viden om svampenes udbredelse og økologi i Danmark, og at gøre denne viden tilgængelig for offentligheden.\n\nMere end 400 frivillige var involveret i Danmarks Svampeatlas, hvor de bidrog med ca. 250.000 kvalitetstjekkede svampefund. Siden er yderligere ca. 50.000 nye svampefund kommet til, mens godt 230.000 gamle svampefund er importeret i projektdatabasen som nu indeholder mere end 600.000 kvalitetstjekkede svampefund. Projektet har medført et langt bedre kendskab til Danmarks funga. Mere end 180 basidiesvampe er blevet føjet til listen over kendte danske arter, og flere arter der var regnet som uddøde er genfundet. Samtidigt er der udviklet en række søge- og hjælpefunktioner der præsenterer vores viden om de enkelte svampearter i overskuelig form, og som gør det meget nemmere at inddrage viden om truede svampearter i naturforvaltningen.\n\nI Svampeatlas 2.0 er det målet at fastholde, fremtidssikre og videreudvikle de ressourcer der er opbygget gennem Danmarks Svampeatlas, til glæde for alle naturinteresserede og til gavn for alle der arbejder med naturforvaltning professionelt. Dette vil bl.a. ske gennem udvikling af en ny databasestruktur, og et interaktivt brugerinterface, der i høj grad inddrager de frivillige svampekyndige som aktive medspillere i processen med at sikre høj datakvalitet. Samtidigt vil vi indbygge smarte filtre, baseret på eksisterende viden om svampenes fænologi og udbredelse i Danmark, der automatisk kan registrere om et nyt svampefund kan regnes som sandsynligt.\n\nUdover udviklingen af nye database og web-funktioner vil projektet udvikle en mobil-app til bestemmelse og registrering af svampefund i felten. Derudover er det målet at fastholde projektets overordnede koncept og resultater i en sammenfattende bog om Danmarks Svampeatlas, samt at skrive et nyt bestemmelsesværk for Danmarks basidiesvampe, baseret på de bestemmelsesnøgler der blev lavet i Danmarks Svampeatlas.\n\nSvampeatlas 2.0 udføres i et samarbejde mellem Center for Makroøkologi, Evolution og Klima (CMEC) ved Statens Naturhistoriske Museum (SNM), Københavns Universitet, Foreningen til Svampekundskabens Fremme og MycoKey. Projektgruppen består af Tobias Guldberg Frøslev, Thomas Stjernegaard Jeppesen, Thomas Læssøe (SNM) og Jens H. Petersen med Jacob Heilmann-Clausen som projektleder. Projektet er støttet af Aage V. Jensens Naturfond.";
-
-/* (No Comment) */
-"aboutVC_general_title" = "Generelt";
+"Although an error occured uploading the image/s. %d out of %d images has been successfully uploaded" = "Men der skete en fejl med at uploade billedet/ne. %d ud af %d billeder er blevet uploaded";
+"Cancel" = "Annuller";
+"Cancel upload" = "Annuller upload";
+"Could not delete" = "Kunne ikke slette";
+"Date: %@" = "Dato: %@";
+"Delete note" = "Slet note";
+"Delete observation" = "Slet observation";
+"Deletions are final" = "Sletning af billedet er permanent";
+"Do you want to fetch data?" = "Vil du gerne hente data til offline brug?";
+"Downloading metadata" = "Henter metadata";
+"Downloading offline data" = "Henter data til offline brug ...";
+"Downloading taxons" = "Henter svampe til offline brug ...";
+"Edit note" = "Rediger note";
+"Edit observation" = "Rediger observation";
+"In order to use this functionality, you need to download data for offline usage. If you have already done so, you might be getting this notification because your downloaded data needs to be updated. Only do it if you have a good internet connection! Are you ready?" = "For at du kan bruge denne funktionalitet, skal du have data downloaded til offline brug. Hvis du allerede har hentet data, skal dataen opdateres. Gør kun dette hvis du har en god internet forbindelse. Er du klar?";
+"Low accuracy" = "Upræcis observationsplacering";
+"New note" = "Ny note";
+"No, I'll adjust it myself" = "Nej, jeg justere placeringen selv";
+"No, continue with the upload" = "Nej, fortsæt med at uploade";
+"No, not right now" = "Nej, ikke lige nu";
+"Notebook" = "Notesbog";
+"Observation with ID: %d" = "Observation med ID: %d";
+"Precision %0.2f m." = "Præcision %0.2f m.";
+"Recieve reminders regarding importance of correct and precise position attached to records" = "Modtag påmindelser vedrørende kontrol af position";
+"Record unidentifed mushroom" = "Indlæg en ubestemt svamp";
+"Reminders" = "Påmindelser";
+"Save" = "Gem";
+"Save as note" = "Gem som note";
+"Saving to local storage" = "Gemmer til lokal database";
+"Success" = "Færdig!";
+"The ability to change your determination for one of your already uploaded observations is coming soon. For now, you can only edit the other properties" = "Muligheden for at tilføje bestemmelser til en allerede bestemt observation kommer snart. For nu, kan du kun redigere de andre variabler";
+"The location accuracy is: %0.2f m, which is too imprecise. Would you like to use your current location instead?" = "Den nuværende præcision er: %0.2f m, hvilket er for upræcist. Vil du bruge din nuværende placering i stedet for?";
+"The location accurracy is: %0.2f m, which is too imprecise. Would you like to use your current location instead?" = "Den nuværende præcision er: %0.2f m, hvilket er for upræcist. Vil du bruge din nuværende placering i stedet for?";
+"The note has been saved in local storage, you can see it in your notebook" = "Noten er blevet gemt i din lokale database, og du kan se det i din notesbog";
+"The note is saved" = "Noten er blevet gemt";
+"The observation was successfully edited" = "Observationen blev opdateret";
+"Try again" = "Prøv igen";
+"Upload now" = "Indsend nu!";
+"Whats new?" = "Hvad er nyt?";
+"When editing an observation, deletions of images are final, even if you do not submit your other changes. This message will only be shown once, and if you still want to delete the image, you will have to delete the it again" = "Når du redigere en observation, er sletning af uploadede billeder permanente, også selvom du ikke uploader andre ændringer. Denne besked vises kun en gang, or du skal slette billedet igen hvis du ønsker at det skal slettes.";
+"Yes, fetch data" = "Ja, hent data";
+"Yes, find my current location" = "Ja, find min nuværende placering";
+"Yes, find my location" = "Ja, find min placering";
+"You are editing an observation" = "Du er igang med at redigere en observation";
+"You do not yet have any saved notes. This functionality enables you to save your observations locally, without uploading it before you are ready. Perhaps once you have a better internet connection" = "Du har ingen gemte noter. Denne funktionalitet lader dig gemme observationer lokalt uden at indsende dem før du er klar. Det er smart hvis du tit har dårlig forbindelse når du er ude og finde svampe.";
+"You have the options below:" = "Du har nedenstående valgmuligheder.";
+"Your device now has the newest update to the taxon database. Get out there!" = "Din enhed har nu den nyeste opdatering til taxon databasen.";
+"aboutVC_generalTerms_message" = "Når du opretter dig som bruger/indrapportør på Danmarks Svampeatlas, har du mulighed for at indlægge svampefund og kommentere på andres fund. Nedenfor gennemgår vi mere detaljeret de betingelser og retningslinier, som vi arbejder efter.
 
 /* (No Comment) */
 "aboutVC_generalTerms_message" = "Når du opretter dig som bruger/indrapportør på Danmarks Svampeatlas, har du mulighed for at indlægge svampefund og kommentere på andres fund. Nedenfor gennemgår vi mere detaljeret de betingelser og retningslinier, som vi arbejder efter.\n\nAlle kan oprette sig som brugere på Danmarks Svampeatlas. Alle indrapporteringer og kommentarer er åbent tilgængelige for alle brugere. Vi henstiller til en god og konstruktiv omgangstone og gør opmærksom på, at du er ansvarlig for de handlinger, der bliver foretaget med dit login på netstedet. Ved gentagne brud på de specifikke retningslinjer som gennemgås nedenfor, forbeholder Danmarks Svampeatlas sig ret til at slette din profil og/eller stoppe din brugeradgang. Det samme kan ske i tilfælde af grov og gentagen forsømmelse af almindelige regler for god omgangstone på nettet.\n\nVi ser meget gerne at du uploader fotos og tekst som dokumentation for dine svampefund. I mange tilfælde kan et godt foto være et krav for, at dine fund kan valideres. Hvis du anvender fotos eller tekster, der ikke er dine egne, skal du sikre at du har rettigheder til at bruge disse. Du er desuden forpligtet til så vidt muligt at sikre, at de geografiske koordinater knyttet til hvert fund er præcise, og at det valgte zoom-niveau ikke resulterer i en højere præcision end der er belæg for.\n\nInformationer og fotos, som du har videregivet til Danmarks Svampeatlas, vises på projektets hjemmeside, under det enkelte fund og ved gallerivisninger for de arter som fundene repræsenterer. Fotos og andre informationer er knyttet til det enkelte svampefund og udgør i mange tilfælde en vigtig dokumentation som derfor ikke slettes. Ved visning på Danmarks Svampeatlas vil fotografens navn tydeligt fremgå. Brug af billederne, ud over de nævnte, vil kun finde sted efter direkte aftale med brugerne, som beholder alle rettigheder til egne fotos. Sender du belæg som dokumentation for enkelte fund, vil den enkelte ekspert beslutte om belægget skal gemmes for eftertiden i samlingerne på Statens Naturhistoriske Museum ved Københavns Universitet eller ved en anden internationalt anerkendt samling.\n\nDe fund-data du indtaster i Danmarks Svampeatlas, videregives til den Globale Biodiversisetets Facilitet (GBIF) under OECD og er internationlt søgbare via gbif.org under OECD. Billeder som er uploadet som dokumentation af hvert fund er linket til dette og er således synlige hos GBIF. Ønsker du ikke at links til dine billeder videregives til GBIF, så send venligst en email til atlas@svampe.dk\n\nHvis du på et tidspunkt vælger at få slettet din profil, forbliver alle informationer og materiale indlagt med denne profil synlige og søgbare på projektets hjemmeside.\n\nValidatorer og administratorer har ret til at slette/ændre information, som vedrører dine observationer, så længe retningslinjerne for information ikke bliver overtrådt derved.";
@@ -123,8 +163,8 @@
 
 /* CommentsTableView */
 "commentsTableView_cell_title" = "Skriv en kommentar";
-
-/* (No Comment) */
+"common_continue" = "Fortsæt";
+"common_upload" = "Indsend";
 "containedResultCell_genus" = "Slægt: ";
 
 /* No comment provided by engineer. */
@@ -366,8 +406,12 @@
 
 /* MapViewSettingsView */
 "mapViewSettingsView_year" = "%d år";
+"modal_localityHelper_message" = "Det er vigtigt for kvaliteten af den indsamlede data, at du kontrollerer at placeringen til din observation er korrekt. Du kan se på klippet nedenfor, hvordan du justerer placeringen manuelt.
 
-/* (No Comment) */
+Hvis det første tilføjede billede indeholder et GPS koordinat, vil appen foreslå at bruge billedets placering istedet for.
+
+Vi vil minde dig om dette engang imellem - du kan slå dette fra i indstillinger.";
+"modal_localityHelper_title" = "Husk at kontrollere din placering";
 "mushroomDetailsScrollView_acceptedRecords" = "Accepterede fund:";
 
 /* (No Comment) */
@@ -756,14 +800,17 @@
 
 /* (No Comment) */
 "settingsInformationCell_message" = "Her har du mulighed for at finjustere din app oplevelse. Lige nu kan du ikke så meget, men der kommer flere muligheder til, jo mere vi kan fornemme i har brug for.";
-
-/* No comment provided by engineer. */
-"Success" = "Færdig!";
-
-/* (No Comment) */
-"termsVC_cameraHelper_message" = "Når du fotografere svampe til bestemmelse så husk følgende:\n\tAt fotografere i bredformat (vandret). Tjek at din telefon ikke har rotationslås aktiveret\n\t- At få både unge og gamle frugtlegemer med på foto (hvis muligt)\n\t- At vise både hat, lameller og evt. slør. læg et par svampe ned - både unge og gamle\n\t- At fotografere i medlys (ikke modlys) og skygge for direkte sollys, fx med din egen krop\n\t- Fotografere du rørhatte så skær gerne et frugtlegeme igennem på langs";
-
-/* (No Comment) */
+"settings_general_header" = "Generelt";
+"settings_locality_message" = "De her indstillinger kan hjælpe dig i situationer hvor du har dårligt internet, og du gerne vil indrapportere en masse observationer fra samme sted.";
+"settings_locality_title" = "Placerings indstillinger";
+"settings_remember_locality" = "Husk denne placering (navn på lokationen)";
+"settings_remember_location" = "Husk disse koordinater";
+"termsVC_cameraHelper_message" = "Når du fotografere svampe til bestemmelse så husk følgende:
+\tAt fotografere i bredformat (vandret). Tjek at din telefon ikke har rotationslås aktiveret
+\t- At få både unge og gamle frugtlegemer med på foto (hvis muligt)
+\t- At vise både hat, lameller og evt. slør. læg et par svampe ned - både unge og gamle
+\t- At fotografere i medlys (ikke modlys) og skygge for direkte sollys, fx med din egen krop
+\t- Fotografere du rørhatte så skær gerne et frugtlegeme igennem på langs";
 "termsVC_cameraHelper_title" = "Sådan tager du de bedste billeder";
 
 /* TermsVC */
@@ -861,31 +908,4 @@
 
 /* Utilities */
 "utilities_photoAlbumName" = "Svampeatlas";
-
-/* No comment provided by engineer. */
-"Whats new?" = "Hvad er nyt?";
-
-/* (No Comment) */
-"When editing an observation, deletions of images are final, even if you do not submit your other changes. This message will only be shown once, and if you still want to delete the image, you will have to delete the it again" = "Når du redigere en observation, er sletning af uploadede billeder permanente, også selvom du ikke uploader andre ændringer. Denne besked vises kun en gang, or du skal slette billedet igen hvis du ønsker at det skal slettes.";
-
-/* No comment provided by engineer. */
-"Yes, fetch data" = "Ja, hent data";
-
-/* (No Comment) */
-"Yes, find my current location" = "Ja, find min nuværende placering";
-
-/* No comment provided by engineer. */
-"Yes, find my location" = "Ja, find min placering";
-
-/* (No Comment) */
-"You are editing an observation" = "Du er igang med at redigere en observation";
-
-/* No comment provided by engineer. */
-"You do not yet have any saved notes. This functionality enables you to save your observations locally, without uploading it before you are ready. Perhaps once you have a better internet connection" = "Du har ingen gemte noter. Denne funktionalitet lader dig gemme observationer lokalt uden at indsende dem før du er klar. Det er smart hvis du tit har dårlig forbindelse når du er ude og finde svampe.";
-
-/* No comment provided by engineer. */
-"You have the options below:" = "Du har nedenstående valgmuligheder.";
-
-/* No comment provided by engineer. */
-"Your device now has the newest update to the taxon database. Get out there!" = "Din enhed har nu den nyeste opdatering til taxon databasen.";
 
