updated from simple localize

--- a/Danmarks Svampeatlas/cs.lproj/Localizable.strings
+++ b/Danmarks Svampeatlas/cs.lproj/Localizable.strings
@@ -59,10 +59,10 @@ Created by simplelocalize.io
 "cameraVC_shouldSaveImagesPrompt_title" = "Chcete uložit vaše fotografie?";
 "cautionCell_lowConfidence" = "Žádný z níže uvedených návrhů pravděpodobně není správný.";
 "commentsTableView_cell_title" = "Napsat komentář";
-"common_clearAll" = "";
+"common_clearAll" = "Vymazat vše";
 "common_continue" = "Pokračovat";
 "common_date" = "Datum: %@";
-"common_localityNotSelected" = "";
+"common_localityNotSelected" = "Nebyla vybrána žádná lokalita";
 "common_success" = "Hotovo!";
 "common_twoChoices" = "Máte následující možnosti:";
 "common_upload" = "Nahrát";
@@ -96,14 +96,14 @@ Created by simplelocalize.io
 "dateFormatting_hoursSince" = "před %d hodinami";
 "dateFormatting_rightNow" = "Teď";
 "dateFormatting_today" = "Dnes";
-"detailsPickerFragment_hostsPicker" = "";
-"detailsPickerFragment_substratePicker" = "";
-"detailsPickerFragment_vegetationTypesPicker" = "";
+"detailsPickerFragment_hostsPicker" = "Vyberte hostitele";
+"detailsPickerFragment_substratePicker" = "Vyberte substrát";
+"detailsPickerFragment_vegetationTypesPicker" = "Vyberte typ vegetace";
 "detailsVC_newSightingPrompt" = "Nové pozorování";
 "detailsVC_observationTitle" = "Pozorování: %@";
 "downloader_message_data" = "Stahování offline dat";
 "downloader_message_taxon" = "Stahování taxonů";
-"downloader_readingFile" = "";
+"downloader_readingFile" = "Čtení souboru";
 "downloader_success" = "Vaše zařízení má nyní nejnovější aktualizaci databáze taxonů.";
 "downloader_title" = "Stahování metadat";
 "elFileManagerError_imageSavingError_message" = "Při pokusu o uložení obrázku do dočasného úložiště v telefonu došlo k chybě.";
@@ -116,9 +116,9 @@ Created by simplelocalize.io
 "elPhotosError_unknownSaveError_title" = "Neznámá chyba";
 "error_addObservationError_lowAccuracy" = "Nepřesné";
 "error_cantDelete" = "Nelze smazat";
-"language_czech" = "";
-"language_danish" = "";
-"language_english" = "";
+"language_czech" = "čeština";
+"language_danish" = "dánština";
+"language_english" = "Angličtina";
 "locationAnnotation_title" = "Místo pozorování";
 "locationManagerError_badAccuracy_message" = "Nebylo možné určit vaši polohu s dostatečnou přesností.";
 "locationManagerError_badAccuracy_title" = "Nepřesné";
@@ -146,7 +146,7 @@ Created by simplelocalize.io
 "mapViewFilteringSettings_ageOfSighting" = "Věk: ";
 "mapViewSettingsView_newSearch" = "Nové hledání";
 "mapViewSettingsView_year" = "%d rok";
-"mapViewSettings_title" = "";
+"mapViewSettings_title" = "Filtrovat vyhledávání";
 "message_deletionsAreFinal" = "Odstranění bylo dokončeno";
 "message_editingObservation" = "Upravujete pozorování";
 "message_imageDeletetionsPermanent" = "Při úpravách pozorování jsou smazání snímků nevratné, i když své další změny neodešlete. Tato zpráva se zobrazí pouze jednou, pokud přesto chcete obrázek smazat, budete vyzváni k potvrzení tohoto kroku.";
@@ -200,7 +200,7 @@ Created by simplelocalize.io
 "notebook_message" = "Ještě nemáte žádné uložené poznámky. Tato funkce vám umožňuje ukládat vaše pozorování lokálně, aniž byste je museli nahrávat, než budou zcela připravena. Možná až budete mít lepší připojení k internetu.";
 "notebook_title" = "Zápisník";
 "notificationCell_determinationExpertApproved" = "schváleno odborníkem.";
-"observationDetailsCell_collectors" = "";
+"observationDetailsCell_collectors" = "Viděno";
 "observationDetailsCell_date" = "Datum:";
 "observationDetailsCell_ecologyNotes_message" = "Na písčité půdě ...";
 "observationDetailsCell_ecologyNotes_title" = "Komentáře k ekologii";
